<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZooTypers</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title">ZOOTYPERS</string>
    <string name="start_string">Start</string>
    <string name="title_activity_zero_feature">ZeroFeature</string>
    <string name="zero_feature1">This is a word we pulled</string>
    <string name="zero_feature2">from the database :</string>
    <string name="title_activity_single_player">SinglePlayer</string>
    <string name="diff_easy">Easy</string>
    <string name="diff_medium">Medium</string>
    <string name="diff_hard">Hard</string>
    <string name="pregame_continue">Continue</string>
    <string name="elephant_alt">Elephant</string>
    <string name="giraffe_alt">Giraffe</string>
    <string name="husky_logo_alt">Husky Logo</string>
    <string name="kangaroo_alt">Kangaroo</string>
    <string name="lion_alt">Lion</string>
    <string name="monkey_alt">Monkey</string>
    <string name="panda_alt">Panda</string>
    <string name="penguin_alt">Penguin</string>
    <string name="turtle_alt">Turtle</string>
    <string name="singleplayer">Single Player</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="options">Options</string>
    <string name="title_activity_pre_game_selection">PreGameSelection</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pre_game_selection_multi">PreGameSelectionMulti</string>
    <string name="title_activity_options">Options</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="placeholder_string">TextView</string>
    <string name="title_activity_single_player_game">SinglePlayerGame</string>
    <string name="score">Score:</string>
    <string name="title_activity_post_game_screen">PostGameScreen</string>
    <string name="final_score">Your Score: </string>
    <string name="main_menu">Main Menu</string>
    <string name="new_game">New Game</string>
    <string name="cont">Continue</string>
    <string name="ad_text">Your ad could be here!</string>
    <string name="pause">| |</string>
    <string name="toggle_keyboard">Keyboard</string>
    <string name="is_paused">Game Paused</string>
    <string name="typedError_prompt">Wrong Letter!</string>
    <string name="username_string">Username</string>
    <string name="password_string">Password</string>
    <string name="login_string">Login</string>
    <string name="register_string">Register</string>
    <string name="title_activity_register_page">RegisterPage</string>
    <string name="confirm_pw_string">Confirm\nPassword</string>
    <string name="email_string">Email</string>
    <string name="submit_string">Submit</string>
    <string name="loggedin_string">You are logged in as&#160;</string>
    <string name="logout_string">Logout</string>
    <string name="your_score">You:</string>
    <string name="opponent_score">Opponent:</string>
    <string name="x_string">X</string>
    <string name="reset_password">Reset</string>
    <string name="forgot_password">Reset your password:</string>
    <string name="title_activity_multi_player">MultiPlayer</string>
    <string name="title_activity_post_game_screen_multi">PostGameScreenMulti</string>
    <string name="opp_final_score">Opponent\'s Score:</string>
    <string name="quit_game">Quit Game</string>
    <string name="connection_error">It looks like there was a problem connecting you to the internet. Please try again!</string>
    <string name="big_error">Oh, No!</string>
    <string name="no_opponent_error">We couldn\'t find an opponent for you! Please try again in a few minutes.</string>
    <string name="title_activity_error">Error</string>
    <string name="interrupt_error">Panic! Something has gone terribly wrong! Please try again.</string>
    <string name="game_over">Game Over!</string>
    <string name="join_now_string"><u>Join now!</u></string>
    <string name="forgot_pw_string"><u>Forgot your password?</u></string>
    <string name="friends_lb_title">Friends Leaderboard</string>
    <string name="rank_string">Rank</string>
    <string name="player_name_string">Player Name</string>
    <string name="score_string">Score</string>
    <string name="default_string">Default</string>
    <string name="default_score">0</string>
    <string name="multiplayer_lb_title">Multiplayer Leaderboard</string>
    <string name="singleplayer_lb_title">Singleplayer Leaderboard</string>
    <string name="animal_used_string">Animal Used</string>
    <string name="title_activity_leaderboard_ui">LeaderboardUi</string>
    <string name="clear_single">Clear Single Player Leaderboard</string>
    <string name="clear_multi">Clear Multiplayer Leaderboard</string>
    <string name="save_score">Save Your Score</string>
    <string name="default_ldbd_name">------</string>
    <string name="default_ldbd_score">--</string>
    <string name="player_name_lb">Player Name</string>
    <string name="enter_name_string">Please enter your name :</string>
    <string name="see_score_string">See your position in the leaderboard</string>
    <string name="relative_score_string">Your Relative Position :</string>
    <string name="close_string">Close</string>
    <string name="title_activity_relative_user_score">RelativeUserScore</string>
    <string name="main_menu_string">Main Menu</string>
    <string name="friend_name_string">Enter your friend\'s name :</string>
    <string name="remove_friend_name_string">Enter name of friend\nto remove :</string>
    <string name="title_activity_multiplayer_lobby">MultiplayerLobby</string>
    <string name="start_time">60</string>
    <string name="title_activity_post_game_screen_disconnect">PostGameScreenDisconnet</string>
    <string name="opp_disconnected">Your opponent disconnected.</string>
    <string name="bgm">Background Music: </string>
    <string name="vibration">Vibration: </string>
    <string name="single_player_tab">Singleplayer</string>
    <string name="multi_player_tab">Multiplayer</string>
    <string name="relative_tab">Relative\nPosition</string>
    <string name="no_scores_title">No scores yet</string>
    <string name="no_scores_msg">You do not have any scores yet. Play games to figure out where you rank!</string>
    <string name="error_login_unexp">Unexpected error occurred, could not login.\nAre you connected to the internet?</string>
    <string name="error_login_combo">Invalid username / password combination</string>
    <string name="error_login_uname">Invalid username</string>
    <string name="error_login_pswd">Invalid password for username</string>
    <string name="error_login_verif">Email is not verified</string>
    <string name="logged_out_title">Logged Out</string>
    <string name="logged_out_msg">You have successfully logged out</string>
    <string name="pswd_reset_title">Password Reset</string>
    <string name="pswd_reset_msg">An email has been sent to you.</string>
    <string name="error_reset_email">Invalid Email Address</string>
    <string name="error_reset_fail">Password Reset Failed</string>
    <string name="close_alert">Close</string>
    <string name="find_game_title">Finding a Game...</string>
    <string name="find_game_msg">Searching for opponent, please wait...</string>
    <string name="clear_lb_title">Cleared Leaderboard</string>
    <string name="clear_lbs_msg">The single player leaderboard has been successfully cleared.</string>
    <string name="clear_lbm_msg">Your multiplayer scores have been successfully cleared.</string>
    <string name="already_saved_title">Score already saved</string>
    <string name="already_saved_msg">You cannot save your current score more than once</string>
    <string name="saved_title">Saved Score</string>
    <string name="saved_msg">Your score has been successfully saved!</string>
    <string name="you_won">You Won!</string>
    <string name="you_lost">You Lost.</string>
    <string name="you_tied">You Tied!</string>
    <string name="missing_reg_title">Missing Information</string>
    <string name="missing_reg_msg">Please fill in all of the fields.</string>
    <string name="unmatch_pswd_title">Invalid Password</string>
    <string name="unmatch_pswd_msg">Password fields do not match.</string>
    <string name="short_up_title">Invalid Username/Password</string>
    <string name="short_up_msg">Username and password must be at least 4 characters.</string>
    <string name="acc_created_title">Account Created Successfully!</string>
    <string name="acc_created_msg">Verify your email before playing.</string>
    <string name="reg_fail_title">Registration Failed</string>
    <string name="reg_faila_msg">Account is already in use.</string>
    <string name="reg_faile_msg">Email is already in use.</string>
    <string name="reg_failu_msg">Username is already in use.</string>
    <string name="reg_faili_msg">Invalid Email Address</string>
    <string name="reg_failo_msg">Email is already in use.</string>
    <string name="no_account_string">Do not have an account yet?</string>
    
</resources>