<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/options_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_grassland"
    tools:context=".Options" >

    <Button
        android:id="@+id/clearSingle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/clear_single"
        android:onClick="clearSingle" />

    <Button
        android:id="@+id/clearMulti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clearSingle"
        android:layout_marginTop="20dp"
        android:text="@string/clear_multi"
        android:onClick="clearMulti" />

    <Button
        android:id="@+id/main_menu_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:onClick="goToTitlePage"
        android:text="@string/main_menu" />

    <Switch
        android:id="@+id/bgm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/vibrate"
        android:layout_marginTop="20dp"
        android:text="@string/bgm" />

    <Switch
        android:id="@+id/vibrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clearMulti"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/vibration" />
    
</RelativeLayout>